<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">"Numix Calculator"</string>
    
    <string name="square_root_symbol">"√¯¯"</string>
    <string name="delete_numbers">"\u21D0"</string>
    <string name="pi">"\u03C0"</string>
    <string name="exp">"^"</string>
    
    <string name="menu_about">"About"</string>
    <string name="menu_settings">"Settings"</string>
    
    <string name="title_activity_settings">"Settings"</string>
    <string name="theme_category_summary">"Change the looks of the calculator"</string>
    <string name="theme_summary">"Choose a theme"</string>
    <string name="theme_title">"Theme"</string>
    <string name="function_category_summary">"Change the functionality of the calculator"</string>
    <string name="function_category_title">"Function"</string>
    <string name="precision_summary">"Choose the length of the result to be displayed (WARNING: if you set this to a number above 500, performance might suffer!)"</string>
    <string name="precision_title">"Precision"</string>
    <string name="angle_summary">"Choose whether to calculate with degrees or radians"</string>
    <string name="angle_title">"Degrees/radians"</string>
    
    <string name="title_activity_about">"About"</string>
    <string name="clean">"Clean"</string>
    <string name="or">"OR"</string>
	<string name="playstore">"<u>Rate this app! It helps us a lot to keep the updates coming.</u>"</string>
	<string name="playstoredon">"<u>Please download the donation version of this app in the playstore if you can spare a buck.</u>"</string>
	<string name="mail">"<u>Mail us your feedback or suggestions.</u>"</string>
	
</resources>