<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen 
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
    
    <PreferenceCategory
        android:summary="@string/function_category_summary"
        android:title="Function" >
        
        <EditTextPreference 
    		android:defaultValue="10" 
    		android:title="@string/precision_title" 
    		android:summary="@string/precision_summary"
    		android:key="precision"
    		android:inputType="number" />  
    		
        <ListPreference
            android:defaultValue="a"
            android:entries="@array/angleOptions"
            android:entryValues="@array/angleValues"
            android:key="angle"
            android:summary="@string/angle_summary"
            android:title="@string/angle_title" />

        
    </PreferenceCategory>

</PreferenceScreen>